--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,14 @@ cycler==0.9.0
 Cython==0.23.4
 decorator==4.0.6
 h5py==2.5.0
-Keras==0.3.1
+Keras==1.0.2
 matplotlib==1.5.0
 networkx==1.10
-numpy==1.10.4
+numpy==1.11.0
 panda==0.3.1
 pandas==0.17.1
-Pillow==3.1.0
+Pillow==3.2.0
+protobuf==3.0.0b2
 pyparsing==2.0.7
 python-dateutil==2.4.2
 python-mnist==0.3
@@ -17,11 +18,9 @@ PyYAML==3.11
 requests==2.9.1
 scikit-image==0.11.3
 scikit-learn==0.17
-scipy==0.16.1
+scipy==0.17.0
 six==1.10.0
-tensorflow==0.5.0
-Theano==0.8.0.dev0
-wheel==0.24.0
+Theano==0.8.2
 ipykernel==4.0.3
 ipython==4.0.0
 ipython-genutils==0.1.0
